--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tim DeHof",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.3.0",
     "express": "^4.18.2",
