--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "test": "jest"
   },
   "author": "Tim DeHof",
   "license": "ISC",
@@ -20,8 +21,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.41.1",
     "@types/node": "^20.11.5",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3"
   }
 }
