--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "playwright": "^1.41.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.1",
     "@types/node": "^20.11.5",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3"
